src/objects/Milestone__c.object
<CustomObject>
    <description>Object used to track project milestones</description>
    <fields>
        <fullName>Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Tick when project is completed</inlineHelpText>
        <label>Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Decision__c</fullName>
        <label>Decision</label>
        <picklist>
            <controllingField>Type__c</controllingField>
            <picklistValues>
                <fullName>Not Started</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project_Type__c</fullName>
        <label>Project Type</label>
        <picklist>
            <picklistValues>
                <fullName>Culture Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bid / Tender</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Milestones</relationshipLabel>
        <relationshipName>Milestones</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Signatory_Email__c</fullName>
        <label>Signatory Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Signatory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Signatory</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Milestones</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <controllingField>Project_Type__c</controllingField>
            <picklistValues>
                <fullName>Viability Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PQQ Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Initial Proposal Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PQQ Decision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Initial Proposal Decision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bid Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Final Proposal Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bid Decision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Final Proposal Decision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Further Requirements Delivered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Final Decision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract Started</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract Complete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Milestone</label>
    <nameField>
        <displayFormat>M-{0000000}</displayFormat>
        <label>Milestone Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Milestones</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>